[package]
name = "league_overlay"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"             # optimize for size
strip = true                # strip symbols to reduce size
lto = true                  # link-time optimization
codegen-units = 1           # better performance

[features]
default = ["res_2560"] # Current method is just swap res you need with this to make different executables.
res_1920 = []
res_2560 = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
riven = "2.69.0"
egui = "0.31.1"
eframe = "0.31.1"

[package.metadata.windows]
subsystem = "windows"