[package]
name = "league_overlay"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

# Target-specific optimizations
[profile.release.package."*"]
opt-level = 3

# Optimize dependencies
[profile.release.package.eframe]
opt-level = 3

[profile.release.package.egui]
opt-level = 3

[features]
default = ["res_2560"] # Current method is just swap res you need with this to make different executables.
res_1920 = []
res_2560 = []

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
egui = "0.31.1"
eframe = "0.31.1"
windows = { version = "0.56.0", features = [
    "Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
raw-window-handle = "0.6.2"
global-hotkey = "0.6"

[package.metadata.windows]
subsystem = "windows"
