[package]
name = "league_overlay"
version = "0.1.0"
edition = "2024"

# Binary targets for different resolutions
[[bin]]
name = "league_overlay_1920"
path = "src/main.rs"
required-features = ["res_1920"]

[[bin]]
name = "league_overlay_2560"
path = "src/main.rs"
required-features = ["res_2560"]

[profile.release]
opt-level = "s"
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

# Target-specific optimizations
[profile.release.package."*"]
opt-level = 3

# Optimize dependencies
[profile.release.package.eframe]
opt-level = 3

[profile.release.package.egui]
opt-level = 3

[features]
default = []
res_1920 = []
res_2560 = []

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
egui = "0.31.1"
eframe = "0.31.1"
windows = { version = "0.56.0", features = [
    "Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
raw-window-handle = "0.6.2"
global-hotkey = "0.6"
png = "0.17.16"

[package.metadata.windows]
subsystem = "windows"
